# data_compression

./: .gitignore  README.md  main.py  poetry.toml  pyproject.toml
benchmarking/: bar.py  benchmarks.py  conduct_experiments.py  foo.py  model_configurations.py
benchmarking/compression/: compression_benchmarks.py
benchmarking/compression/benchmarks/: compression_ratio.py  reconstruction_error.py
benchmarking/performance/: params.py  performance_benchmarks.py  time.py
benchmarking/performance/benchmarks/: flops.py  main.py  memory.py  time.py
data/: get_distillate_flow.py  get_intel_berkeley_lab.py
models/: dummy_model.py
models/cbn_vae/: create_model.py
models/cbn_vae/custom_layers/: custom_conv2d_transpose.py  max_pooling_with_argmax.py  unpooling_with_argmax.py
models/dwt/: dwt.py  n_dim_dwt.py  one_dim_dwt.py
models/rnn/: create_model.py  evaluate_model.py  get_data_and_config.py  rnn.py  train_model.py
models/shared_code/: custom_callback.py  get_data_and_config.py
utils/: plotter.py  terminal_colorizer.py
