[tool.poetry]
name = "data_compression"
version = "0.1.0"
description = ""
authors = ["Fabian Rothfuß <fabian.rothfuss@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.4.3"
tensorflow = "2.5.1"
pandas = "^1.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
tornado = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
